# equinox

./: .gitignore  LICENSE  Makefile  README.md  netlify.toml  wrangler.toml
.github/workflows/: ci.yml  security.yml
contracts/: Cargo.toml
contracts/equinox-bridge/: Cargo.toml
contracts/equinox-bridge/src/: lib.rs  test.rs
contracts/equinox-bridge/test_snapshots/test/: test_batch_operation.1.json  test_get_contracts.1.json  test_zero_amount_panics.1.json
contracts/equinox-pool/: Cargo.toml
contracts/equinox-pool/src/: lib.rs  test.rs
contracts/equinox-token/: Cargo.toml
contracts/equinox-token/src/: lib.rs  test.rs
contracts/equinox-token/test_snapshots/test/: test_balance_zero.1.json  test_burn.1.json  test_events_mint.1.json  test_initialize.1.json  test_mint.1.json  test_mint_unauthorized.1.json  test_set_treasury.1.json  test_transfer_fee.1.json
deployments/: testnet.json
frontend/: .env  instrumentation.ts  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/__tests__/: amm.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx  swr-provider.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: BottomNav.tsx  ErrorBoundary.tsx  EventFeed.tsx  Navbar.tsx  Skeleton.tsx  StatsBar.tsx  TrustlineCard.tsx
frontend/hooks/: useContractEvents.ts  useFreighter.ts  usePoolStats.ts  useSSTBalance.ts  useSSTPrice.ts  useTrustline.ts
frontend/lib/: amm.ts  config.ts  safeStellarCall.ts  stellarReads.ts
screenshots/: .gitkeep
scripts/: check-trustline.js  deploy.js  setup-trustlines.js
(+25 files in other folders)
