[package]
name = "equinox-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
equinox-token = { path = "../equinox-token" }
equinox-pool = { path = "../equinox-pool" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
